syntax="proto3";
option go_package = "/api";

import "google/protobuf/empty.proto";

service UserService { 
    rpc CreateUser(User)returns(User);
    rpc DeleteUser(UserId)returns(google.protobuf.Empty);
    rpc UpdateUser(UpdateUserReq)returns(User);
    rpc GetUser(UserId)returns(User);
    rpc ListUsers(ListUsersReq)returns(ListUsersResp);
}

message User {
    //
    int64	id = 1 ;
    //
    string	name = 2 ;
    //
   repeated   int32	age = 3 ;
    //
    string	ctime = 4 ;
    //
    string	mtime = 5 ;  
}

enum UserField{
    User_unknow = 0;
    User_id = 1;
    User_name = 2;
    User_age = 3;
    User_ctime = 4;
    User_mtime = 5;   
}

message UserId{
    int64 id = 1 ; 
}

message UpdateUserReq{
    User user = 1 ;
    repeated UserField update_mask  = 2 ;
}


message ListUsersReq{
    // number of page
    int32 page = 1 ;
    // default 20
    int32 page_size = 2 ;
    // order by field
    UserField order_by_field = 3 ; 
    // ASC DESC
    bool order_by_desc = 4; 
     // filter
    repeated UserFilter filters = 5 ; 
    //  select_fields
    repeated UserField select_fields = 6; 
}

message UserFilter{
     UserField field = 1;
    string op = 2;
    string value = 3;
}

message ListUsersResp{
    repeated User users = 1 ; 
    int32 total_count = 2 ;   
    int32 page_count = 3 ; 
  }
